--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,29 @@
-body{
-    background-color: blanchedalmond;
-    color: rgb(2, 99, 159);
+body {
+    font-family: Arial, sans-serif;
+    background-color: #bdbdbd; /* cor de fundo azulada */
+    text-align: center;
+}
+
+.caixa {
+    background-color: #000000; /* fundo cinza escuro */
+    color: rgb(255, 0, 0); /* letras brancas */
+    padding: 20px;
+    margin: 50px auto;
+    width: 60%;
+    border-radius: 5px;
+}
+
+.links {
+    background-color: #ffffff; /* fundo azul claro */
+    padding: 15px;
+    margin: 0 auto;
+    width: 60%;
+    border-radius: 5px;
+}
+
+a {
+    color: brown; /* cor dos links */
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0 10px;
 }
